@@ -4,6 +4,7 @@
 - fix setting a hash as includes, cannot be concat in finder
 - add option to scroll on close only if element is not visible in viewport (default now)
 - fix create and edit singular associations without render_component
+- messages go across all table
 
 = 3.2.7
 - restore missing update.persistent feature
